[DAQ-4469] add gda_field_name attribute to fields added by dataset processors
Change-Id: Ie961fd5a8ed35fc8f12e891754931cfa2fc961d1